erDiagram
    csip_record ||--|| referral: "was created by"
    csip_record ||--o{ audit_event: "changes tracked by"
    referral ||--o{ contributory_factor: "has contributory factors"
    referral ||--o| investigation: "optionally has an"
    referral ||--o| safer_custody_screening_outcome: "optionally has a"
    investigation ||--o{ interview: "can involve interviews with"
    referral ||--o| decisions_and_actions: "optionally has"
    csip_record ||--o| plan: "if decision is progress to CSIP"
    plan ||--o{ identified_need: "has one or more"
    plan ||--o{ review: "regularly reviewed"
    review ||--o{ attendee: "attended by"
    referral }o--|| reference_data: "incident categorised by"
    referral }o--|| reference_data: "incident occurred in"
    referral }o--|| reference_data: "referer categorised by"
    referral }o--|| reference_data: "referred person was involved in the indecent as"
    safer_custody_screening_outcome }o--|| reference_data: "outcome categorised by"
    interview }o--|| reference_data: "role of interviewee"
    decisions_and_actions }o--|| reference_data: "outcome categorised by"
    decisions_and_actions }o--|| reference_data: "role of person signing off the referral decision"
    contributory_factor }o--|| reference_data: "categorised by"

    csip_record {
        uuid record_id PK "not null unique. Mapped to OFFENDER_CSIP_REPORTS"
        bigint legacy_id "unique. Prevents duplicate records via NOMIS -> DPS sync"
        varchar(10) prison_number "not null. The prison number of the person the CSIP record is for"
        varchar(6) prison_code_when_recorded "The prison code where the person was resident at the time the CSIP record was created. Maps to OFFENDER_CSIP_REPORTS.AGY_LOC_ID"
        varchar(10) log_code "User entered identifier for the CSIP record. Defaults to the prison code. Maps to OFFENDER_CSIP_REPORTS.CSIP_SEQ"
        int version "increments on each update"
        timestamp created_at "not null. The date and time the CSIP record was created. Maps to OFFENDER_CSIP_REPORTS.CREATE_DATETIME"
    }

    referral {
        uuid referral_id PK "not null. Maps csip_record.record_id"
        date incident_date "not null. The date the incident that motivated the CSIP referral occurred. Maps to RFR_INCIDENT_DATE"
        time incident_time "The time the incident that motivated the CSIP referral occurred. Maps to OFFENDER_CSIP_REPORTS.RFR_INCIDENT_TIME"
        bigint incident_type_id FK "not null. FK to reference_data. The type of incident that motivated the CSIP referral. Maps to OFFENDER_CSIP_REPORTS.RFR_INCIDENT_TYPE"
        bigint incident_location_id FK "not null. FK to reference_data. The location of the incident that motivated the CSIP referral. Maps to OFFENDER_CSIP_REPORTS.RFR_INCIDENT_LOCATION"
        varchar(240) referred_by "not null. The person reporting the incident or creating the CSIP referral. Maps to OFFENDER_CSIP_REPORTS.RFR_REPORTED_BY"
        bigint referer_area_of_work_id FK "not null. FK to reference_data. The area of work of the person reporting the incident or creating the CSIP referral. Maps to OFFENDER_CSIP_REPORTS.RFR_CSIP_FUNCTION"
        date referral_date "not null. The date the CSIP referral was raised. Maps to OFFENDER_CSIP_REPORTS.RFR_DATE_REPORTED"
        boolean proactive_referral "Was this referral proactive or preventative. Maps to OFFENDER_CSIP_REPORTS.RFR_PROACTIVE_RESPONSE where the default is 'N'"
        boolean staff_assaulted "Were any members of staff assaulted in the incident. Maps to OFFENDER_CSIP_REPORTS.RFR_STAFF_ASSAULTED where the default is 'N'"
        text assaulted_staff_name "Name or names of assaulted members of staff if any. Maps to OFFENDER_CSIP_REPORTS.RFR_STAFF_NAME. 1000 character limit"
        date release_date "The release date of the person in prison. Can be planned released date or the date they were released. Maps to OFFENDER_CSIP_REPORTS.CDR_RELEASE_DATE. Likely set by another screen in NOMIS"
        bigint incident_involvement_id FK "not null. FK to reference_data. The type of involvement the person had in the incident. Maps to OFFENDER_CSIP_REPORTS.CDR_INVOLVEMENT"
        text description_of_concern "not null. The reasons why there is cause for concern. Maps to OFFENDER_CSIP_REPORTS.CDR_CONCERN_DESCRIPTION"
        text known_reasons "not null. The reasons already known about the causes of the incident or motivation for CSIP referral. Maps to OFFENDER_CSIP_REPORTS.INV_KNOWN_REASONS"
        text other_information "Any other information about the incident or reasons for CSIP referral. Maps to OFFENDER_CSIP_REPORTS.CDR_OTHER_INFORMATION"
        boolean safer_custody_team_informed "Records whether the safer custody team been informed. Maps to OFFENDER_CSIP_REPORTS.CDR_SENT_DENT where the default is 'N'"
        boolean referral_complete "Is the referral complete. Maps to OFFENDER_CSIP_REPORTS.REFERRAL_COMPLETE_FLAG where the default is 'N'"
        varchar(64) referral_completed_by "The username of the user who completed the CSIP referral. Maps to OFFENDER_CSIP_REPORTS.REFERRAL_COMPLETED_BY"
        varchar(255) referral_completed_by_display_name "The displayable name of the user who completed the CSIP referral. Not mapped"
        date referral_completed_date "The date the referral was completed. Maps to OFFENDER_CSIP_REPORTS.REFERRAL_COMPLETED_DATE"
        int version "increments on each update"
    }

    contributory_factor {
        uuid contributory_factor_id PK "not null unique. Mapped to OFFENDER_CSIP_FACTORS"
        bigint legacy_id "unique. Prevents duplicate contributory factors via NOMIS -> DPS sync"
        uuid referral_id FK "not null"
        bigint contributory_factor_type_id FK "not null. FK to reference_data. The type of contributory factor to the incident or motivation for CSIP referral. Mapped to OFFENDER_CSIP_FACTORS.CSIP_FACTOR"
        text comment "Additional information about the contributory factor to the incident or motivation for CSIP referral. Maps to OFFENDER_CSIP_FACTORS.COMMENTS"
        int version "increments on each update"
    }

    safer_custody_screening_outcome {
        uuid safer_custody_screening_outcome_id PK "not null. Maps referral.referral_id"
        bigint outcome_id "not null. FK to reference_data. The type of outcome of the safer custody screening. Maps to OFFENDER_CSIP_REPORTS.CDR_OUTCOME"
        varchar(100) recorded_by "not null. The username of the user who recorded the safer custody screening outcome. Maps to OFFENDER_CSIP_REPORTS.CDR_OUTCOME_RECORDED_BY"
        varchar(255) recorded_by_display_name "not null. The displayable name of the user who recorded the safer custody screening outcome. Not mapped"
        date date "not null. The date of the safer custody screening outcome. Maps to OFFENDER_CSIP_REPORTS.CDR_OUTCOME_DATE"
        text reason_for_decision "not null. The reasons for the safer custody screening outcome decision. Maps to OFFENDER_CSIP_REPORTS.CDR_DECISION_REASON. 4000 character limit"
        int version "increments on each update"
    }

    investigation {
        uuid investigation_id PK "not null. Maps referral.referral_id"
        text staff_involved "The names of the staff involved in the investigation. Maps to OFFENDER_CSIP_REPORTS.INV_STAFF_INVOLVED. 4000 character limit"
        text evidence_secured "Any evidence that was secured as part of the investigation. Maps to OFFENDER_CSIP_REPORTS.INV_EVIDENCE_SECURED. 4000 character limit"
        text occurrence_reason "The reasons why the incident occurred. Maps to OFFENDER_CSIP_REPORTS.INV_OCCURRENCE_REASON. 4000 character limit"
        text persons_usual_behaviour "The normal behaviour of the person in prison. Maps to OFFENDER_CSIP_REPORTS.INV_USUAL_BEHAVIOUR. 4000 character limit"
        text persons_trigger "What triggers the person in prison has that could have motivated the incident. Maps to OFFENDER_CSIP_REPORTS.INV_PERSONS_TRIGGER. 4000 character limit"
        text protective_factors "Any protective factors. Maps to OFFENDER_CSIP_REPORTS.INV_PROTECTIVE_FACTORS. 4000 character limit"
        int version "increments on each update"
    }

    interview {
        uuid interview_id PK "not null unique. Mapped to OFFENDER_CSIP_INTVW"
        bigint legacy_id "unique. Prevents duplicate interviews via NOMIS -> DPS sync"
        uuid investigation_id FK "not null"
        varchar(100) interviewee "not null. Name of the person being interviewed. Maps to OFFENDER_CSIP_INTVW.CSIP_INTERVIEWEE"
        date interview_date "not null. The date the interview took place. Maps to OFFENDER_CSIP_INTVW.INTVW_DATE"
        bigint interviewee_role_id FK "not null. FK to reference_data. What role the interviewee played in the incident or referral. Maps to OFFENDER_CSIP_INTVW.INTVW_ROLE"
        text interview_text "Information provided in interview. Maps to OFFENDER_CSIP_INTVW.COMMENTS. 4000 character limit"
        int version "increments on each update"
    }

    decision_and_actions {
        uuid decision_and_actions_id PK "not null. Maps referral.referral_id"
        text conclusion "The conclusion of the referral and reasons for the outcome decision. Maps to OFFENDER_CSIP_REPORTS.INV_CONCLUSION. 4000 character limit"
        bigint outcome_id "not null. FK to reference_data. The outcome decision for the referral. Maps to OFFENDER_CSIP_REPORTS.INV_OUTCOME"
        bigint signed_off_by_role_id "FK to reference_data. The role of the person making the outcome decision. Maps to OFFENDER_CSIP_REPORTS.INV_SIGNED_OFF_BY"
        varchar(64) recorded_by "The username of the user who recorded the outcome decision. Maps to OFFENDER_CSIP_REPORTS.INV_OUTCOME_RECORDED_BY"
        varchar(255) recorded_by_display_name "The displayable name of the user who recorded the outcome decision. Not mapped"
        date date "The date the outcome decision was made. Maps to OFFENDER_CSIP_REPORTS.INV_OUTCOME_DATE"
        text next_steps "The next steps that should be taken following the outcome decision. Maps to OFFENDER_CSIP_REPORTS.INV_NEXT_STEPS. 4000 character limit"
        varchar[] actions "An enumeration of actions that may have been recommended ['OPEN_CSIP_ALERT', 'NON_ASSOCIATIONS_UPDATED', 'OBSERVATION_BOOK', 'UNIT_OR_CELL_MOVE', 'CSRA_OR_RSRA_REVIEW', 'SERVICE_REFERRAL', 'SIM_REFERRAL']"
        text action_other "Any other actions that are recommended to be considered. Maps to OFFENDER_CSIP_REPORTS.INV_OTHER. 4000 character limit"
        int version "increments on each update"
    }

    plan {
        uuid plan_id PK "not null. Maps csip_record.record_id"
        varchar(100) case_manager "not null. The case manager assigned to the CSIP plan. Maps to OFFENDER_CSIP_REPORTS.CASE_MANAGER"
        varchar(240) reason_for_plan "not null. The reasons motivating the creation of a CSIP plan. Maps to OFFENDER_CSIP_REPORTS.REASON"
        date first_case_review_date "not null. The first date the CSIP plan should be reviewed. Maps to OFFENDER_CSIP_REPORTS.CASE_REV_DATE"
        int version "increments on each update"
    }

    identified_need {
        uuid identified_need_id PK "not null unique. Mapped to OFFENDER_CSIP_PLANS"
        bigint legacy_id "unique. Prevents duplicate identified needs via NOMIS -> DPS sync"
        uuid plan_id FK "not null"
        text identified_need "not null. Details of the need identified in the CSIP plan. Maps to OFFENDER_CSIP_PLANS.IDENTIFIED_NEED. 1000 character limit"
        varchar(100) responsible_person "not null. The name of the person who is responsible for taking action on the intervention. Maps to OFFENDER_CSIP_PLANS.BY_WHOM. Who identified the need (free text)"
        date created_date "not null. The date the need was identified. Maps to OFFENDER_CSIP_PLANS.CREATE_DATE. Date the need was identified"
        date target_date "not null. The target date the need should be progressed or resolved. Maps to OFFENDER_CSIP_PLANS.TARGET_DATE. Target date of the identified need"
        date closed_date "The date the identified need was resolved or closed. Maps to OFFENDER_CSIP_PLANS.CLOSED_DATE"
        text intervention "not null. The planned intervention for the identified need. Maps to OFFENDER_CSIP_PLANS.INTERVENTION. 4000 character limit"
        text progression "How the plan to address the identified need. is progressing. Maps to OFFENDER_CSIP_PLANS.PROGRESSION. 4000 character limit"
        int version "increments on each update"
    }

    review {
        uuid review_id PK "not null unique. Mapped to OFFENDER_CSIP_REVIEWS"
        bigint legacy_id "unique. Prevents duplicate reviews via NOMIS -> DPS sync"
        uuid plan_id FK "not null"
        int review_sequence "not null. The review number. Maps to OFFENDER_CSIP_REVIEWS.REVIEW_SEQ"
        date review_date "The date of the review. Maps to OFFENDER_CSIP_REVIEWS.CREATE_DATE"
        varchar(64) recorded_by "not null. The username of the person who recorded the review. Maps to OFFENDER_CSIP_REVIEWS.CREATE_USER"
        varchar(255) recorded_by_display_name "not null. The displayable name of the person who recorded the review. Not mapped"
        date next_review_date "The date of the next review. Maps to OFFENDER_CSIP_REVIEWS.NEXT_REVIEW_DATE"
        varchar[] actions "If the actions following the review include: informing people responsible for the person in prison, updating the CSIP plan, deciding the person should remain on the CSIP plan, adding a CSIP case note, and closing the CSIP plan. Maps to OFFENDER_CSIP_REVIEWS.PEOPLE_INFORMED, OFFENDER_CSIP_REVIEWS.CSIP_UPDATED, OFFENDER_CSIP_REVIEWS.REMAIN_ON_CSIP, OFFENDER_CSIP_REVIEWS.CASE_NOTE, and OFFENDER_CSIP_REVIEWS.CLOSE_CSIP, which all have default value 'N'"
        date csip_closed_date "The date the CSIP plan was closed following a review outcome decision to close it. Maps to OFFENDER_CSIP_REVIEWS.CLOSE_DATE"
        text summary "Additional information about the review. Maps to OFFENDER_CSIP_REVIEWS.SUMMARY. 4000 character limit"
        int version "increments on each update"
    }

    attendee {
        uuid attendee_id PK "not null unique. Mapped to OFFENDER_CSIP_ATTENDEES"
        bigint legacy_id "unique. Prevents duplicate attendees via NOMIS -> DPS sync"
        uuid review_id FK "not null"
        varchar(100) name "not null. Name of review attendee/contributor. Maps to OFFENDER_CSIP_ATTENDEES.ATTENDEE_NAME"
        varchar(50) role "not null. Role of review attendee/contributor. Maps to OFFENDER_CSIP_ATTENDEES.ATTENDEE_ROLE"
        boolean attended "If the person attended the review. Indicates that they were a contributor if false. Maps to OFFENDER_CSIP_ATTENDEES.ATTENDED where the default is 'N'"
        text contribution "Description of attendee contribution. Maps to OFFENDER_CSIP_ATTENDEES.CONTRIBUTION. 4000 character limit"
        int version "increments on each update"
    }

    reference_data {
        bigserial reference_data_id PK "not null"
        varchar(30) domain "not null composite-unique(domain+code)."
        varchar(12) code "not null composite-unique(domain+code). The NOMIS reference data code for the CSIP_TYP, CSIP_LOC, CSIP_FUNC, CSIP_INV, CSIP_FAC, CSIP_OUT, CSIP_INTVROL, and CSIP_ROLE domain"
        varchar(40) description
        int list_sequence
        timestamp created_at "not null"
        varchar(64) created_by "not null"
        timestamp last_modified_at
        varchar(64) last_modified_by
        timestamp deactivated_at
        varchar(64) deactivated_by
    }

    person_location {
        varchar(10) prison_number PK "not null"
        varchar(64) first_name
        varchar(64) last_name
        varchar(16) status "not null"
        varchar(16) prison_code
        varchar(64) cell_location
    }
